Fix weird sidebar width on Firefox

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -31,7 +31,7 @@
 
     a {
       display: inline-block;
-      width: 250px;
+      width: 220px;
     }
   }
 
